--- a/haveaseat/web/index.html
+++ b/haveaseat/web/index.html
@@ -27,16 +27,48 @@
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 
     <title>haveaseat</title>
     <link rel="manifest" href="manifest.json" />
+    <!-- 캐시 관련 메타 태그 -->
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+
+    <!-- Open Graph 메타 태그 수정 -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Have A Seat" />
+    <meta property="og:title" content="Have A Seat | 공간 관리 플랫폼" />
+    <meta
+      property="og:description"
+      content="당신의 공간을 더 특별하게 만들어드립니다"
+    />
+    <meta
+      property="og:image"
+      content="https://hvsconnect.com/preview.png?v=1"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="400" />
+    <meta property="og:url" content="https://hvsconnect.com" />
+
+    <!-- 카카오톡 앱 정보 -->
+    <meta property="al:web:url" content="https://hvsconnect.com" />
 
     <script>
       // The value below is injected by flutter build, do not touch.
       const serviceWorkerVersion = null;
     </script>
     <!-- This script adds the flutter initialization JS code -->
+
     <script src="flutter.js" defer></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script>
